# 2023.d2r2.aksw.org

./: .gitignore  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: .pages  call-for-papers.md  index.md  organizing-committee.md  previous.md  proceedings.md  program-committee.md  program.md  schedule.md  venue.md
docs/assets/: extra.css
docs/stylesheets/: extra.css
tools/: README.md  __init__.py
